--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ highlighter: pygments
 # so be sure to set them if your theme uses them.
 #
 title : Aabhas Sharma
-tagline: Site Tagline
+tagline: Aabhas Sharma
 author :
   name : Aabhas Sharma
   email : aabhas.sharma at gmail dot com
